# Ahiriman

./: #auto_saved_files#  .gitignore  .gitmodules  Ahriman-cache.lib  Ahriman-rescue.kicad_sym  Ahriman-rescue.lib  Ahriman.bak  Ahriman.bck  Ahriman.kicad_pcb  Ahriman.kicad_pcb-bak  Ahriman.kicad_pro  Ahriman.kicad_sch  Ahriman.kicad_sch-bak  Ahriman.kicad_sym  Ahriman.net  Ahriman.pro  Ahriman.sch  Ahriman.sch-bak  fp-info-cache  fp-lib-table
Ahriman.pretty/: PTS636.kicad_mod  RH100-12.000-16-3030-TR.kicad_mod
firmware/: CMakeLists.txt  Makefile  main.c
firmware/application/: main.c
firmware/bootloader/: CMakeLists.txt
firmware/bootloader/abstraction/serial/: serial.c  serial.h
firmware/bootloader/config/: config.h
firmware/bootloader/interface/command/: command.c  command.h
firmware/bootloader/interface/data/: data.c  data.h
firmware/bootloader/lib/dict/: dict.h
firmware/bootloader/lib/helper/: helper.h
firmware/bootloader/lib/schedule/: schedule.c
firmware/bootloader/main/: main.c
firmware/bootloader/task/update/: update.c
firmware/cmake/: arm.cmake  tools.cmake
firmware/shared/chip/: CMakeLists.txt
firmware/shared/chip/GD25Q80C/: GD25Q80C.c  GD25Q80C.h
firmware/shared/drivers/: CMakeLists.txt
firmware/shared/drivers/atomic/: atomic.h
firmware/shared/drivers/clock/: clock.h
firmware/shared/drivers/cpu/: cpu.h
firmware/shared/drivers/delay/: delay.h
firmware/shared/drivers/dma/: dma.h
firmware/shared/drivers/flash/: flash.h
firmware/shared/drivers/gpio/: gpio.h
firmware/shared/drivers/i2c/: i2c.h
firmware/shared/drivers/spi/: spi.h
firmware/shared/drivers/timer/: timer.h
firmware/shared/drivers/uart/: uart.h
firmware/shared/drivers/watchdog/: watchdog.h
firmware/shared/interface/: CMakeLists.txt
firmware/shared/interface/ext_flash/: ext_flash.c  ext_flash.h
firmware/shared/platform/: CMakeLists.txt
firmware/shared/platform/efm32/: efm32.cmake  platform.h  startup_efm32tg11b.S
firmware/shared/platform/efm32/drivers/atomic/: atomic.c
firmware/shared/platform/efm32/drivers/clock/: clock.c
firmware/shared/platform/efm32/drivers/cpu/: cpu.c
firmware/shared/platform/efm32/drivers/delay/: delay.c
firmware/shared/platform/efm32/drivers/dma/: dma.c
firmware/shared/platform/efm32/drivers/flash/: flash.c
firmware/shared/platform/efm32/drivers/gpio/: gpio.c
firmware/shared/platform/efm32/drivers/i2c/: i2c.c
firmware/shared/platform/efm32/drivers/i2s/: i2s.c
firmware/shared/platform/efm32/drivers/spi/: spi.c
firmware/shared/platform/efm32/drivers/timer/: timer.c
firmware/shared/platform/efm32/drivers/uart/: uart.c
firmware/shared/platform/efm32/drivers/watchdog/: watchdog.c
firmware/shared/platform/efm32/toolchain/: efm32tg11b.ld
hardware/: Ahriman.dcm  Ahriman.kicad_pcb  Ahriman.kicad_prl  Ahriman.kicad_pro  Ahriman.kicad_sch  Ahriman.lib  Ahriman.xml  sym-lib-table
hardware/01_BOM/: Ahriman.csv
hardware/02_PinDefs/: pindefs.csv
hardware/Ahriman.pretty/: USB3145-30-1-A.kicad_mod  mouthsock.kicad_mod
